GNOME Bugzilla – Bug 635202
mpeg4videoparse: Minor fixes
Last modified: 2010-12-08 12:41:47 UTC
A couple of fixes to mpeg4videoparse. The first of these improves error handling. The second passes on sinkpad caps onto the srcpad (and adds/overrides fields as before) to make sure we don't lose any fields set from upstream.
Created attachment 174790 [details] [review] mpeg4videoparse: Minor fix to error handling We weren't handling unparseable codec_data in some cases.
Created attachment 174791 [details] [review] mpeg4videoparse: Use sinkpad caps as base for srcpad caps This way, we don't lose additional fields that come from upstream (like profile/level for now).
Comment on attachment 174791 [details] [review] mpeg4videoparse: Use sinkpad caps as base for srcpad caps This one's bad (GST_PAD_CAPS may return NULL). Attaching a fixed version.
Created attachment 174797 [details] [review] mpeg4videoparse: Use sinkpad caps as base for srcpad caps This way, we don't lose additional fields that come from upstream (like profile/level for now).
Created attachment 174798 [details] [review] mpeg4videoparse: Use sinkpad caps as base for srcpad caps This way, we don't lose additional fields that come from upstream (like profile/level for now).
Created attachment 176010 [details] [review] mpeg4videoparse: minor fix to error handling How about this for error handling; it avoids a possibly confusing message going on about "no start code" when there may be one (though later parsing fails).
Created attachment 176011 [details] [review] mpeg4videoparse: Use sinkpad caps as base for srcpad caps A slightly safer version of the previous one.
Comment on attachment 174790 [details] [review] mpeg4videoparse: Minor fix to error handling Heh, don't know what I was thinking - Mark's version is clearly simpler.
++ to both from me, fwiw.
commit acc8730de8b7e0a20bc15c2ce4f214256c8a9fee Author: Arun Raghavan <arun.raghavan@collabora.co.uk> Date: Thu Nov 18 23:29:51 2010 +0530 mpeg4videoparse: Use sinkpad caps as base for srcpad caps This way, we don't lose additional fields that come from upstream (like profile/level for now). https://bugzilla.gnome.org/show_bug.cgi?id=635202 commit e7fe665403f29ca48497c1fff18205fb447242f6 Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk> Date: Tue Dec 7 15:20:29 2010 +0100 mpeg4videoparse: minor fix to error handling We weren't handling unparseable codec_data in some cases. https://bugzilla.gnome.org/show_bug.cgi?id=635202