mpeg4videoparse: Use sinkpad caps as base for srcpad caps

This way, we don't lose additional fields that come from upstream (like
profile/level for now).

https://bugzilla.gnome.org/show_bug.cgi?id=635202